# examples-for-eos-vm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  hello.wasm  wasm.cpp
contracts/: CMakeLists.txt
contracts/src/: CMakeLists.txt  hello.cpp  print_num.cpp
src/: main.cpp  my_backend.hpp  my_visitor.hpp  static_analysis.hpp
